[gd_scene load_steps=2 format=3 uid="uid://dhjvtbsxdlov8"]

[ext_resource type="Script" path="res://menus/lobby/lobby_host.gd" id="1_olgfa"]

[node name="lobby_host" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_olgfa")

[node name="teamA_back" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 283.0
grow_horizontal = 2

[node name="teamA_1" type="Button" parent="teamA_back"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -88.5
offset_right = 279.0
offset_bottom = 88.5
grow_vertical = 2

[node name="teamA_2" type="Button" parent="teamA_back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -88.5
offset_right = 114.5
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2

[node name="teamA_3" type="Button" parent="teamA_back"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -88.5
offset_right = -50.0
offset_bottom = 88.5
grow_horizontal = 0
grow_vertical = 2

[node name="teamB_back" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.342593
anchor_right = 1.0
anchor_bottom = 0.779321
offset_top = 142.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 0

[node name="teamB_1" type="Button" parent="teamB_back"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -88.5
offset_right = 279.0
offset_bottom = 88.5
grow_vertical = 2

[node name="teamB_2" type="Button" parent="teamB_back"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -88.5
offset_right = 114.5
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2

[node name="teamB_3" type="Button" parent="teamB_back"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -88.5
offset_right = -50.0
offset_bottom = 88.5
grow_horizontal = 0
grow_vertical = 2

[node name="start_game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 367.0
offset_top = 282.0
offset_right = 480.0
offset_bottom = 313.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "start game"

[node name="join_waiting" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -24.0
offset_right = 124.0
offset_bottom = 27.0
grow_vertical = 2
text = "join waiting"

[node name="waiting" type="ItemList" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 290.0
offset_right = 1141.0
offset_bottom = 355.0
max_columns = 6

[connection signal="pressed" from="teamA_back/teamA_1" to="." method="_on_team_A1_pressed"]
[connection signal="pressed" from="teamA_back/teamA_2" to="." method="_on_team_A2_pressed"]
[connection signal="pressed" from="teamA_back/teamA_3" to="." method="_on_team_A3_pressed"]
[connection signal="pressed" from="teamB_back/teamB_1" to="." method="_on_team_B1_pressed"]
[connection signal="pressed" from="teamB_back/teamB_2" to="." method="_on_team_B2_pressed"]
[connection signal="pressed" from="teamB_back/teamB_3" to="." method="_on_team_B3_pressed"]
[connection signal="pressed" from="join_waiting" to="." method="_on_join_waiting_pressed"]
